adding accessibility for skip-nav

--- a/demo-app/app/app.component.html
+++ b/demo-app/app/app.component.html
@@ -1,5 +1,5 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<a class="skip-main" href="#body-container" target="_self">Skip to main content</a>
+<a id="skip-main" class="skip-main" href="javascript:void(0)" target="_self">Skip to main content</a>
 
 <mat-sidenav-container>
   <mat-sidenav #sidenav class="sidenav" mode="side" opened="false" [fixedInViewport]="true"
