fixed strays, css

--- a/demo-app/styles.scss
+++ b/demo-app/styles.scss
@@ -266,7 +266,7 @@ a.skip-main:focus, a.skip-main:active {
   z-index:999;
 }
 
-a:visited { 
+a.skip-main:visited { 
   text-decoration: none;  
   color: rgb(74, 74, 79); 
 }
