removing page level access page

--- a/demo-app/app/accessibility/components/page-level-guidelines/skip-nav-guidelines.html
+++ b/demo-app/app/accessibility/components/page-level-guidelines/skip-nav-guidelines.html
@@ -1,7 +1,5 @@
-<h1>Page Level Guidelines</h1>
-<p>The following are page level accessibility guidelines. Please follow these guidelines when implementing pages.</p>
-
-<h2>Skip Navigation</h2>
+<h1>Skip Navigation</h1>
+<p> The following are page level, skip navigation guidelines should be adhered to when implementing new pages:</p>
 <ul>
     <li><h3>Why?</h3></li>
         <p>With skip navigation integration, keyboard users are able to skip to the main content element of a page 
