--- a/demo-app/app/accessibility/components/page-level-guidelines/skip-nav-guidelines.html
+++ b/demo-app/app/accessibility/components/page-level-guidelines/skip-nav-guidelines.html
@@ -10,7 +10,7 @@
         browser extension</a> or by <a href="https://www.w3.org/TR/WCAG20-TECHS/G1.html">activating the focused Skip Navigation link</a>.</p>
 
     <li><h3>Code Examples</h3></li>
-    <p>The skip navigation functionality has already been integrated into the web application for page level 
+    <p>The skip navigation functionality has already been integrated into the UltiPro web appplication for page level 
         accessibility and the ign-list-content component. For new applications, please utilize the below 
         templates.  </p>
             <ul>
