initial confluence scrape, new modified generator templates to match dev for initial sync

--- a/demo-app/styles.scss
+++ b/demo-app/styles.scss
@@ -271,4 +271,34 @@ a.skip-main:visited {
   color: rgb(74, 74, 79); 
 }
 
+#dont{
+  color: red;
+}
+
+#do{
+  color: darkgreen;
+}
+
+td, th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+tr:nth-child(even){background-color: #f2f2f2;}
+
+th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #4CAF50;
+  color: white;
+}
+
+.button-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+
    
