Added accessibility route link to guidelines page

--- a/demo-app/app/accessibility/components/page-level-guidelines/routes-guidelines.html
+++ b/demo-app/app/accessibility/components/page-level-guidelines/routes-guidelines.html
@@ -1,12 +1,12 @@
 <h1>Routes</h1>
+<p> The following are page level, route name guidelines should be adhered to when implementing new pages.</p>
 
 <h3>Accessibility Requirements</h3>
-
 <ul>
     <li>The route name is set as the title of the webpage in the tab and is spoken when the page is opened</li>
     <ul>
         <li>Consider how the route will sound when spoken. Acronyms such as 'TOA' would not be understood by accessibility readers.</li>
-        <li>Try to use words that are not shortened or abreviated for the best accessibility experience</li>
+        <li>Try to use words that are not shortened or abbreviated for the best accessibility experience</li>
+        <li>Keep your route names short yet descriptive</li>
     </ul>
-    <li>Keep your route names short yet descriptive</li>
 </ul>
