--- a/src/data-table-container/data-table-container.scss
+++ b/src/data-table-container/data-table-container.scss
@@ -19,28 +19,28 @@ $hover-color: #EEEEEE;
     }
 }
 
-:host /deep/ .mat-cell {
+:host ::ng-deep .mat-cell {
     @extend %column-spacing;
 }
 
-:host /deep/ .mat-header-cell {
+:host ::ng-deep .mat-header-cell {
     @extend %column-spacing;
 }
 
-:host /deep/ .checkbox  {
+:host ::ng-deep .checkbox  {
     padding-right: ign-spacing(s);
     overflow: initial;
 }
 
-:host /deep/ .mat-checkbox-inner-container {
+:host ::ng-deep .mat-checkbox-inner-container {
     @include icon-sizing();
 }
 
-:host /deep/ .mat-checkbox-checked.mat-accent .mat-checkbox-background, .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
+:host ::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background, .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
     background-color: ign-color(accent);
 }
 
-:host /deep/ .inline-edit  {
+:host ::ng-deep .inline-edit  {
     padding-right: ign-spacing(xs);
     text-align: right;
     overflow: initial;
@@ -50,15 +50,15 @@ $hover-color: #EEEEEE;
     }
 }
 
-:host /deep/ .number-column {
+:host ::ng-deep .number-column {
     text-align: right;
 }
 
-:host /deep/ .mat-header-row {
+:host ::ng-deep .mat-header-row {
     height: ign-spacing(xl);
 }
 
-:host /deep/ .mat-row {
+:host ::ng-deep .mat-row {
     height: ign-spacing(l);
 
     &:hover {
@@ -66,6 +66,6 @@ $hover-color: #EEEEEE;
     }
 }
 
-:host /deep/ .mat-paginator {
+:host ::ng-deep .mat-paginator {
     height: 56px;
 }
