--- a/src/avatar/avatar.component.scss
+++ b/src/avatar/avatar.component.scss
@@ -1,15 +1,19 @@
-// Sizes
-$size-large: 70px;
-$font-size-large: 28px;
-$icon-size-large: 42px;
+@import '~ignite-common/styles/ignite';
 
+// Sizes
 $size-small: 40px;
-$font-size-small: 18px;
-$icon-size-small: 28px;
+$size-large: ign-size(xxl);
+
+$icon-size-small: ign-icon-size(s); 
+$icon-size-large: ign-icon-size(m); 
+
+$font-size-small: ign-font-size(xxxs);
+$font-size-large: ign-font-size(s);
 
 // Colors
-$light-gray: #E0E0E0;
-$dark-gray: #424242;
+$white: ign-palette($ign-palette-gray, 50);
+$light-gray: ign-palette($ign-palette-gray, 150);
+$dark-gray: ign-palette($ign-palette-gray, 500);
 
 .container {
   width: $size-large;
@@ -38,7 +42,7 @@ $dark-gray: #424242;
     padding-top: 24px;
     text-align: center;
     background-color: $dark-gray;
-    color: #ffffff;
+    color: $white;
   }
 
   .icon-container {
