Updated aria-labels to be localized, updated translation pipe to accept values outside of given mapping

--- a/src/list-search/list-search.component.html
+++ b/src/list-search/list-search.component.html
@@ -5,7 +5,7 @@
   <input
     matInput
     placeholder="Search"
-    attr.aria-label="{{ariaLabel}}"
+    attr.aria-label="{{ariaLabel | translateIDS}}"
     #searchInput
     (keyup.escape)="searchInput.value=''; emitSearchEvents()"
     (keyup)="emitSearchEvents()">
