--- a/src/right-drawer/right-drawer.scss
+++ b/src/right-drawer/right-drawer.scss
@@ -1,55 +1,65 @@
 @import '~ignite-common/styles/ignite';
 
 :host {
+  width: 0;
+
+  &.drawer-is-open {
+    // positioning
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom:0;
+    width: 100vw;
+
+    // layering
+    z-index: 3; // DO NOT GO ABOVE 3 Z-INDEX
+
+    // colors
+    background-color: rgba(ign-color('black'), .5);
+  }
+}
+
+#backdrop {
+  width: 100%;
+  height: 100%;
+}
+
+mat-drawer {
   // positioning
   position: fixed;
   right: 0;
   top: 0;
   bottom: 0;
-  width: 0;
-
-  // layering
   z-index: 3; // DO NOT GO ABOVE 3 Z-INDEX
 
   // colors
   background-color: ign-color('white');
-  //TODO: RGBA Colors
-  //box-shadow: 0 16px 12px 0 rgba(0,0,0,0.22), 0 19px 38px 0 rgba(0,0,0,0.30);
-  box-shadow: 0 16px 12px 0 ign-palette($ign-palette-gray, 300), 0 19px 38px 0 ign-palette($ign-palette-gray, 200);
-
-  opacity: 1;
 
   // contents flow down
   display: flex;
   flex-direction: column;
 
-  // padding
-  padding-top: 1.5rem;
+  // animations:
+  transition: width 300ms ease-out;
 
-  // animations: 
-  transition: all 300ms ease-out;
-
-  &.drawer-is-open {
-    width: 16rem;
-    opacity: 1;
-  }
+  // scrolling
+  overflow-y: auto;
 }
 
 .title-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 0.5rem;
-  margin: 0 1rem .5rem 1rem;
+  margin: 1.5rem 0.5rem 1.25rem 1rem;
 }
 
 .title {
+  padding-top: 0.25rem;
   font-size: 20px;
   font-weight: 500;
 }
 
 .close-icon {
-  padding: 0.25rem;
   color: ign-palette($ign-palette-gray, 400);
   cursor: pointer;
 }
