--- a/src/avatar/avatar.component.scss
+++ b/src/avatar/avatar.component.scss
@@ -36,7 +36,7 @@ $dark-gray: ign-palette($ign-palette-gray, 500);
       @extend %flex-centering;
 
       background-color: ign-color(dark);
-      font-size: ign-typography(caption, font-size);
+      font-size: 14px; // TODO: Discuss with design system team on achieving these sizes
       color: $white;
     }
 
@@ -44,7 +44,7 @@ $dark-gray: ign-palette($ign-palette-gray, 500);
       @extend %full-width-height;
       @extend %flex-centering;
 
-      font-size: 14px; // TODO: Discuss with design system team on achieving these sizes
+      font-size: ign-icon-size(s);
       background-color: $light-gray;
     }
   }
