--- a/src/info-banner/info-banner.scss
+++ b/src/info-banner/info-banner.scss
@@ -3,7 +3,7 @@
 :host {
   display: block;
   padding: 16px 16px;
-  color: ign-color(accent);
+  color: ign-color(secondary);
   background: ign-color(light);
   margin-bottom: 1em;
 }
