--- a/src/card/card-toolbar/card-toolbar.scss
+++ b/src/card/card-toolbar/card-toolbar.scss
@@ -18,7 +18,7 @@
 
 :host /deep/ button {
   text-transform: uppercase;
-  color: ign-color(accent);
+  color: ign-color(secondary);
 }
 
 :host /deep/ mat-icon {
