Made view all button optional based on the presence of the link

--- a/src/avatar-group/avatar-group.component.html
+++ b/src/avatar-group/avatar-group.component.html
@@ -24,7 +24,7 @@
                 [attr.role]="counterLink ? 'link' : ''"
                 (click)="counterClick.emit()"></ign-avatar>
   </div>
-  <div *ngIf="showContext">
+  <div *ngIf="showContext && viewAllLink">
         <button mat-button
                 class="context__tool-all"
                 [routerLink]="viewAllLink ? [viewAllLink] : []"
