--- a/src/avatar-group/avatar-group.component.scss
+++ b/src/avatar-group/avatar-group.component.scss
@@ -18,13 +18,10 @@ $dark-gray: ign-palette($ign-palette-gray, 500);
   }
 }
 
-.context__all {
+button.context__all {
   padding-left: 0;
   padding-right: 0;
   color: ign-color(secondary);
-  font-size: 0.875rem; // TODO: the typography font-size for button doesn't match spec, neither do raw tokens
-  font-family: $ign-font-family;
-  font-weight: 400; // TODO: the typography font-weight for buttons doesn't match spec
   text-transform: uppercase;
 }
 
