--- a/src/persistent-search/persistent-search.component.html
+++ b/src/persistent-search/persistent-search.component.html
@@ -6,7 +6,7 @@
     matInput
     placeholder="{{placeholder | translateIDS}}"
     #searchInput
-    da="searchBarInput"
+    [attr.da]="searchBarInput"
     (keyup.escape)="searchInput.value=''; emitSearchEvents()"
     (keyup)="emitSearchEvents()">
   <button
