Fixing deprecated angular material directives

--- a/src/persistent-search/persistent-search.component.html
+++ b/src/persistent-search/persistent-search.component.html
@@ -1,7 +1,7 @@
 <mat-icon
   class="search-icon">search</mat-icon>
 <mat-form-field
-  floatPlaceholder="never">
+  floatLabel="never">
   <input
     matInput
     placeholder="{{placeholder | translateIDS}}"
