--- a/src/persistent-search/persistent-search.component.scss
+++ b/src/persistent-search/persistent-search.component.scss
@@ -18,13 +18,13 @@ mat-form-field {
   max-width: 11.25rem;
 
   ::ng-deep {
-    .mat-input-underline {
+    .mat-form-field-underline {
       display: none;
     }
-    .mat-input-infix {
+    .mat-form-field-infix {
       padding-bottom: 0;
     }
-    .mat-input-wrapper {
+    .mat-form-field-wrapper {
       padding-bottom: 1rem;
     }
   }
