fixed scss lint script. Fixed sandboxes and commented un-used variable for currency mask

--- a/src/avatar-group/avatar-group.component.html
+++ b/src/avatar-group/avatar-group.component.html
@@ -26,6 +26,7 @@
   </div>
   <div *ngIf="showContext && viewAllLink">
         <button mat-button
+                color="secondary"
                 class="context__all"
                 [routerLink]="viewAllLink ? [viewAllLink] : []"
                 attr.aria-label="{{ viewAllAriaLabel }}"
