--- a/projects/ign/src/lib/avatar/avatar.component.html
+++ b/projects/ign/src/lib/avatar/avatar.component.html
@@ -1,16 +1,16 @@
 <div id="avatar"
-     [class]="'container ' + getSize(size) + ' container--' + getState()"
+     [class]="'container ' + avatarSize + ' container--' + state"
      matTooltip="{{ tooltip }}"
      attr.aria-label="{{ tooltip || ariaLabel }}"
      tabindex="{{ (!!tooltip || !!ariaLabel) ? 0 : -1 }}">
-      <img *ngIf="getState() === 'image'"
+      <img *ngIf="state === 'image'"
            [src]="image"
            class="image"
            alt="">
-      <span *ngIf="getState() === 'initials'"
+      <span *ngIf="state === 'initials'"
             class="initials"
             aria-hidden="true">{{ initials }}</span>
-      <mat-icon *ngIf="getState() === 'icon'"
+      <mat-icon *ngIf="state === 'icon'"
             class="icon"
             aria-hidden="true">person</mat-icon>
 </div>
