--- a/projects/ign/src/lib/avatar-group/avatar-group.component.html
+++ b/projects/ign/src/lib/avatar-group/avatar-group.component.html
@@ -2,21 +2,21 @@
   <div id="avatar-group"
        fxLayout="row"
        tabindex="-1">
-    <ign-avatar *ngFor="let avatar of sanitizeAvatars(avatars).slice(0, cap); let i = index"
+    <ign-avatar *ngFor="let avatar of sanitizedAvatars; let i = index"
                 class="avatar avatar-group"
                 matListAvatar
-                [tooltip]="getAvatarTooltip(avatar)"
-                [image]="avatar.image || ''"
-                [initials]="avatar.person ? getPersonInitials(avatar.person) : ''"
+                [tooltip]="avatar.tooltip"
+                [image]="avatar.image"
+                [initials]="avatar.initials"
                 [size]="size"
-                [routerLink]="avatar.link ? [avatar.link] : []"
+                [routerLink]="[avatar.link]"
                 tabindex="-1"
                 (click)="avatarClick.emit(avatar)"></ign-avatar>
-    <ign-avatar *ngIf="showCounter && getCounterValue(avatars) > 0"
+    <ign-avatar *ngIf="showCounter && counterValue > 0"
                 id="counter"
                 [class]="'avatar-group ' + (showContext ? 'counter--context' : 'counter--plus')"
                 matListAvatar
-                [initials]="getCounterInitials()"
+                [initials]="counterInitials"
                 [size]="size"
                 [routerLink]="counterLink ? [counterLink] : []"
                 [ariaLabel]="counterAriaLabel || ' '"
@@ -31,7 +31,7 @@
                 [routerLink]="viewAllLink ? [viewAllLink] : []"
                 attr.aria-label="{{ viewAllAriaLabel }}"
                 (click)="viewAllClick.emit()">
-                {{'VIEW_ALL' | translateIDS}} ({{ this.getCounterValue(avatars) + this.cap }})
+                {{'VIEW_ALL' | translateIDS}} ({{ counterValue + cap }})
         </button>
   </div>
 </div>
