--- a/projects/ign/src/lib/button-group/button-group.scss
+++ b/projects/ign/src/lib/button-group/button-group.scss
@@ -4,6 +4,6 @@
   flex-direction: row;  
 }
 
-:host /deep/ button:not(:first-child) {
-  margin-left: 16px;
+:host ::ng-deep > button:not(:first-child) {
+  margin-left: 1rem;
 }
